2010-10-19 Roman
- FIX:Archives: No permited user's access to main subsystem's data is fixed.


2010-10-17 Roman
- !!:Archive, Special: Template module "=Templ=" is added for the subsystems.
- FIX:SYS.TCntrNode, SYS.ModSchedul: Force loading is added by properties "force" to function TCntrNode::load().
    Force loading at module enable is fixed.
- FIX:SYS: Pass for detached tasks CPU affinity is fixed. Get thread's TID for x86_64 and other non x86 is fixed.


2010-10-13 Roman
- !!!!:DOC: OpenSCADA manual documents and API document is updated for 0.7.0.
- !!!!:FIX:SYS: Task create function is fixed for prevent crash at auto closed task for fast close.
- !!!!:FIX:Transport.SSL: Wait for respond data is final fixed by reason wait for data processing into BIO_read().
- !!:FIX:Transport.Sockets: Tail wait result at zero is fixed for DAQ.System.HDDTemp.


2010-10-11 Roman
- !!:UI.QTStarter: Documents and translations is updated and released version 1.6.0.
- !!:UI.QTCfg: Documents and translations is updated and released version 1.9.0.
- !!:UI.WebCfg: Documents and translations is updated and released version 1.5.4.
- !!:UI.WebCfgD: Documents and translations is updated and released version 0.6.5.
- !!:UI.VCAEngine: Documents and translations is updated and released version 1.0.0.
- !!:UI.Vision: Documents and translations is updated and released version 1.0.0.
- !!:UI.WebVision: Documents and translations is updated and released version 0.9.0.
- !!:UI.WebUser: Documents and translations is updated and released version 0.6.0.


2010-10-10 Roman
- !!:Transport.Sockets: Documents and translations is updated and released version 1.4.5.
- !!:Transport.SSL: Documents and translations is updated and released version 0.9.5.
- !!:Transport.Serial: Documents and translations is updated and released version 0.7.1.
- !!:Protocol.HTTP: Documents and translations is updated and released version 1.5.0.